RESOLVED FIXED56361
Buildfix if JIT is not enabled after r81079
https://bugs.webkit.org/show_bug.cgi?id=56361
Summary Buildfix if JIT is not enabled after r81079
Laszlo Gombos
Reported 2011-03-14 21:04:29 PDT
Error: compile : JavaScriptCore\runtime\Executable.cpp "N:/webkit/Source/JavaScriptCore/runtime/Executable.cpp", line 190: Error: #20: identifier "JITCode" is undefined static bool tryDFGCompile(JSGlobalData* globalData, CodeBlock* codeBlock, JITCode& jitCode, MacroAssemblerCodePtr& jitCodeWithArityCheck) ^ "N:/webkit/Source/JavaScriptCore/runtime/Executable.cpp", line 190: Error: #20: identifier "MacroAssemblerCodePtr" is undefined static bool tryDFGCompile(JSGlobalData* globalData, CodeBlock* codeBlock, JITCode& jitCode, MacroAssemblerCodePtr& jitCodeWithArityCheck) ^ N:/webkit/Source/JavaScriptCore/runtime/Executable.cpp: 0 warnings, 2 errors
Attachments
buildfix for cq (1.20 KB, patch)
2011-03-14 21:17 PDT, Laszlo Gombos
no flags
Laszlo Gombos
Comment 1 2011-03-14 21:17:50 PDT
Created attachment 85769 [details] buildfix for cq
WebKit Commit Bot
Comment 2 2011-03-14 23:50:53 PDT
Comment on attachment 85769 [details] buildfix for cq Clearing flags on attachment: 85769 Committed r81118: <http://trac.webkit.org/changeset/81118>
WebKit Commit Bot
Comment 3 2011-03-14 23:50:58 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.