2011-03-14  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

Unreviewed build fix.

        Buildfix when JIT is not enabled after r81079
        https://bugs.webkit.org/show_bug.cgi?id=56361

        * runtime/Executable.cpp:

Canonical link: https://commits.webkit.org/70998@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@81118 268f45cc-cd09-0410-ab3c-d52691b4dbfc